--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "flask>=3.1.1",
     "flask-cors>=6.0.0",
-    "moviepy>=2.2.1",
+    "moviepy==1.0.3",
     "numpy>=2.2.6",
     "opencv-python>=4.11.0.86",
     "torch>=2.7.0",
